# lightbender

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs
crates/lightbender-interaction/: Cargo.toml
crates/lightbender-interaction/src/: camera.rs  lib.rs  orbital.rs
crates/lightbender-object-loaders/: Cargo.toml
crates/lightbender-object-loaders/src/: gltf_loader.rs  image_loader.rs  lib.rs  obj_loader.rs  ply_loader.rs
crates/lightbender-renderer/: Cargo.toml  build.rs
crates/lightbender-renderer/shaders/compiled/: gbuffer.frag.spv  gbuffer.vert.spv  mesh.frag.spv  mesh.vert.spv  pbr.frag.spv  pbr.vert.spv  shadow.vert.spv  skybox.frag.spv  skybox.vert.spv  ssao.frag.spv  ssao_blur.frag.spv
crates/lightbender-renderer/shaders/src/: fullscreen.vert  gbuffer.frag  gbuffer.vert  mesh.frag  mesh.vert  pbr.frag  pbr.vert  shadow.vert  skybox.vert  ssao.frag  ssao_blur.frag  triangle.vert
crates/lightbender-renderer/src/: gpu_scene.rs  image.rs  lib.rs  ltc.rs  renderer.rs  ssao.rs
crates/lightbender-scene/: Cargo.toml
crates/lightbender-scene-loaders/: Cargo.toml
crates/lightbender-scene-loaders/src/: json_loader.rs  lib.rs  mitsuba_loader.rs
crates/lightbender-scene/src/: lib.rs  tangent.rs
scenes/: bump_demo.json  example.json  helmet.json  helmet_env.json  multi.json  shadows.json
shaders/src/: pbr.frag  pbr.vert  skybox.frag
src/: app.rs  main.rs  types.rs
src/camera/: mod.rs  orbital.rs
src/input/: mod.rs
src/renderer/: mod.rs
src/scene/: gltf_loader.rs  loader.rs  mitsuba_loader.rs  mod.rs  obj_loader.rs  ply_loader.rs
src/shader/: mod.rs
src/vulkan/: buffer.rs  image.rs  mod.rs
tests/: render_scenes.rs
tools/: gen_ltc_lut.py
