[package]
name = "lightbender"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ash            = "0.38"
ash-window     = "0.13"
raw-window-handle = "0.6"
winit          = { version = "0.30", features = ["rwh_06"] }
glam           = { version = "0.29", features = ["serde"] }
gltf           = { version = "1.4", features = ["extras", "names", "utils"] }
image          = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
log            = "0.4"
env_logger     = "0.11"
anyhow         = "1"
bytemuck       = { version = "1", features = ["derive"] }

[profile.dev]
opt-level = 1
