[workspace]
members = [
    "crates/lightbender-scene",
    "crates/lightbender-interaction",
    "crates/lightbender-object-loaders",
    "crates/lightbender-scene-loaders",
    "crates/lightbender-renderer",
]

[package]
name = "lightbender"
version = "0.1.0"
edition = "2024"

[dependencies]
lightbender-scene = { path = "crates/lightbender-scene" }
lightbender-interaction = { path = "crates/lightbender-interaction" }
lightbender-object-loaders = { path = "crates/lightbender-object-loaders" }
lightbender-scene-loaders = { path = "crates/lightbender-scene-loaders" }
lightbender-renderer = { path = "crates/lightbender-renderer" }
winit          = { version = "0.30", features = ["rwh_06"] }
glam           = { version = "0.29", features = ["serde"] }
log            = "0.4"
env_logger     = "0.11"
anyhow         = "1"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1"
tempfile = "3"

[profile.dev]
opt-level = 1
