[package]
name = "lightbender-object-loaders"
version = "0.1.0"
edition = "2024"

[dependencies]
lightbender-scene = { path = "../lightbender-scene" }

glam    = { version = "0.29", features = ["serde"] }
anyhow  = "1"
log     = "0.4"

# glTF
gltf = { version = "1.4", features = ["extras", "names", "utils"] }

# OBJ
tobj = "4"

# PLY
ply-rs = "0.1"

# Image decoding (textures + HDR env maps)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "hdr", "exr"] }
