[package]
name = "lightbender-renderer"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
lightbender-scene       = { path = "../lightbender-scene" }
lightbender-interaction = { path = "../lightbender-interaction" }

ash            = "0.38"
ash-window     = "0.13"
raw-window-handle = "0.6"
winit          = { version = "0.30", features = ["rwh_06"] }
glam           = { version = "0.29", features = ["serde"] }
image          = { version = "0.25", default-features = false, features = ["png", "jpeg", "hdr", "exr"] }
log            = "0.4"
anyhow         = "1"
bytemuck       = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
