[package]
name = "lightbender-scene-loaders"
version = "0.1.0"
edition = "2024"

[dependencies]
lightbender-scene = { path = "../lightbender-scene" }
lightbender-object-loaders = { path = "../lightbender-object-loaders" }

glam      = { version = "0.29", features = ["serde"] }
anyhow    = "1"
log       = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml  = "0.37"
